--- a/src/app/email/component/email-list/email-list.component.css
+++ b/src/app/email/component/email-list/email-list.component.css
@@ -58,7 +58,9 @@
   padding-bottom: 10px;
   position: relative;
   height: 45px;
+
 }
+
 .email-wrapper div{
   display: inline-block;
   vertical-align: top;
@@ -90,8 +92,11 @@
 }
 /*邮件信息*/
 .email-user-info{
-
+  cursor: pointer;
   line-height: normal!important;
+}
+.email-user-info:focus{
+  outline: none;
 }
 /*昵称*/
 .nickname{
