--- a/src/app/home/component/home/home.component.css
+++ b/src/app/home/component/home/home.component.css
@@ -9,7 +9,7 @@
 /*  background: rgb(178,34,34);
 
 
-  background: rgb(220, 132, 163);*/
+ background: rgb(220, 132, 163);
 /*  background: rgb(63,81,181);*/
   background: rgb(242,242,242);
   border-bottom: 1px solid rgb(213,213,213);
